--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,3 +3,8 @@ $secondaryColor: #e84545;
 $accentColor: #903749;
 $maroonColor: #53354a;
 $lightColor: #fffffc;
+$grayColor: #eeeeee;
+$darkBlue: #06102a;
+
+$fontRoboto: 'Roboto Slab', serif;
+$fontRaleway: 'Raleway', sans-serif;
