--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,3 +4,7 @@
 @import 'global';
 @import 'header';
 @import 'hero';
+@import 'services';
+@import 'skills';
+@import 'projects';
+@import 'footer';
