--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,3 +1,13 @@
+$fontWeight: (
+  'light': 300,
+  'regular': 400,
+  'bold': 700,
+);
+
+@function rem($px) {
+  @return #{$px/16}rem;
+}
+
 @mixin breakpoint($device) {
   @if $device == desktop {
     @media (min-width: 1025px) and (max-width: 1280px) {
